[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Things/EnemyHand/EnemyHand.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 47, 48 )

[node name="EnemyHand" type="Node2D"]
script = ExtResource( 2 )

[node name="MovingPart" type="Node2D" parent="."]

[node name="Visual" type="Node2D" parent="MovingPart"]

[node name="Icon2" type="Sprite" parent="MovingPart/Visual"]
position = Vector2( 0, 731.5 )
scale = Vector2( 0.53125, 22.7031 )
texture = ExtResource( 1 )

[node name="Icon" type="Sprite" parent="MovingPart/Visual"]
scale = Vector2( 1.65625, 1.65625 )
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="MovingPart"]
position = Vector2( 0, -92 )

[node name="Area2D" type="Area2D" parent="MovingPart"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPart/Area2D"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="screen_exited" from="MovingPart/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="MovingPart/Area2D" to="." method="_on_Area2D_area_entered"]
